--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@ body{
     padding-left: 3rem;
     padding-right: 3rem;
     background-color: #ffffffc9;
-    position: fixed;
+    
 }
 .logo h2{
     font-weight: 800;
@@ -235,6 +235,7 @@ padding: 1.5rem 2rem;
     max-width: 100%;
     margin: auto;
 }
+
 .options-section{
     width: 90%;
     display: flex;
@@ -248,6 +249,15 @@ padding: 1.5rem 2rem;
     margin: auto;
     
 }
+.options-contac-buttons{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+    gap: 1rem;
+}
+
+
+
 .buttons-option{
     max-width: 90%;
 display: flex;
@@ -270,21 +280,14 @@ gap: 2rem;
     width: 60%;
     margin-left: 4rem;
 }
-.options-contac-buttons{
-    width: 90%;
-    display: grid;
-    
-    background-color: #148BE3;
-}
-
 .options-section-contac{
     display: flex;
     width: 100%;
     margin: auto;
+    align-items: center;
+    justify-content: space-around;
 }
-.options-contac{
-    
-}
+
 .options-contac-texto, .options-contac-buttons{
 width: 90%;
 margin: auto;
@@ -292,7 +295,22 @@ margin: auto;
 .contac-card-container{
 display: flex;
 align-items: center;
-justify-content: center;
+justify-content: space-evenly;
+margin-bottom: 1.5rem;
+}
+.div-aux{
+    width: 58%;
+    margin: auto;
+}
+.but{
+    background-color: var(--blanco);
+}
+.button-card{
+margin: auto;
+}
+.contac-card{
+    box-shadow:1px 10px 20px -8px  #00000056;
+height: 11rem;
 }
 
 .footer-pro{
@@ -329,4 +347,43 @@ justify-content: center;
 .footer-options_option{
     display: flex;
     flex-direction: column;
+}
+.footer-pro h4{
+color: var( --letras );
+font-size: 1.5rem;
+font-weight: 800;
+}
+.footer-pro h5{
+    color: var( --oscuro );
+    font-size: 1rem;
+    font-weight: 800;
+    }
+.footer-pro a {
+    color: var(--gris);
+    font-weight: 700;
+    margin-top: 1.2rem;
+}
+.footer-pro p {
+    color: var(--gris);
+    font-weight: 700;
+}
+.terms{
+    margin-top: 5rem;
+   
+}
+.icono-general-p{
+    font-size: 28px;
+    color: var(--letras);
+    
+    padding: .2rem;
+    border-radius: 10px;
+    margin: 0;
+}
+.icono-general-c{
+    font-size: 35px;
+    color: var(--letras);
+   
+    padding: .2rem;
+    border-radius: 10px;
+    margin: 0;
 }
